Updated scroll window to include horizontal scroll. Set the height to 450px to make sure it is similar to properties well.

--- a/public/css/finwebapp.css
+++ b/public/css/finwebapp.css
@@ -86,7 +86,7 @@
 }
 
 .well-password-big {
-    position: relative;
+  position: relative;
   min-height: 600px;
   min-width: 300px;
   padding: 19px;
@@ -98,8 +98,10 @@
 }
 
 .DivWithScroll{
-    overflow:scroll;
-    overflow-x:hidden;
+
+    overflow-y:auto;
+    overflow-x:auto;
+    height: 450px;
 }
 
 .error-alert
